# Projeto---Sistema-para-nutricionistas-

./: .gitignore  Manual_Engenharia_Software_Sistema_Nutricionistas_V1.docx  Nutri Clinic Pro.spec  README.md  pyproject.toml  requirements-dev.txt  run_app.py
database/: schema.sql
database/migrations/: 0001_initial_schema.sql  0002_seed_permissions.sql  0003_extend_anthropometry.sql  0004_body_composition.sql  0005_energy_expenditure.sql  0006_nutrition_diagnosis.sql  0007_meal_plan.sql  0008_food_database.sql  0009_recipes.sql  0010_supplements.sql  0011_reports.sql  0012_finance.sql  0013_backup_security.sql  0014_patient_app.sql  0015_web_portal.sql  0016_ai_assistant.sql  0017_external_integrations.sql  0018_release_readiness.sql  0019_advanced_clinical_modules.sql
docs/: arquitetura_inicial.md  backlog_mvp.md  build_executavel.md  git_github_fluxo.md  release_v1_0.md
docs/fases/: fase_02_arquitetura_base.md  fase_03_login_permissoes.md  fase_06_agenda.md  (+29 more)
tests/: test_advanced_clinical.py  test_ai_assistant.py  test_anamnesis_repository.py  test_anthropometry.py  test_anthropometry_repository.py  test_appointment_repository.py  test_auth.py  test_backup_security.py  test_body_composition.py  test_dashboard_repository.py  test_energy_expenditure.py  test_finance.py  test_food_database.py  test_integrations.py  test_laboratory_exam.py  test_meal_plan.py  test_migrator.py  test_nutrition_diagnosis.py  test_patient_app.py  test_patient_repository.py  test_recipes.py  test_release.py  test_reports.py  test_screening.py  test_supplements.py  test_web_portal.py
(+109 files in other folders)
