[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[project]
name = "sistema-nutricionistas"
version = "0.1.0"
description = "Sistema profissional para atendimento, avaliação e acompanhamento nutricional."
requires-python = ">=3.12"
dependencies = [
  "PySide6>=6.7",
]

[project.optional-dependencies]
dev = [
  "pyinstaller>=6.0",
  "ruff>=0.6",
]

[project.scripts]
nutri-app = "nutri_app.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
